RESOLVED FIXED16865
fast/layers/resize-layer-deletion-crash.html crashes under GuardMalloc
https://bugs.webkit.org/show_bug.cgi?id=16865
Summary fast/layers/resize-layer-deletion-crash.html crashes under GuardMalloc
mitz
Reported 2008-01-13 14:36:39 PST
fast/layers/resize-layer-deletion-crash.html crashes in ~RenderLayer under GuardMalloc when checking if the document is being destroyed.
Attachments
Move layer destruction into RenderObject::destroy() (2.02 KB, patch)
2008-01-13 15:43 PST, mitz
darin: review+
mitz
Comment 1 2008-01-13 15:43:40 PST
Created attachment 18426 [details] Move layer destruction into RenderObject::destroy()
Darin Adler
Comment 2 2008-01-13 19:53:50 PST
Comment on attachment 18426 [details] Move layer destruction into RenderObject::destroy() Looks fine. r=me
mitz
Comment 3 2008-01-13 20:41:51 PST
Note You need to log in before you can comment on or make changes to this bug.