        Reviewed by Darin Adler.

- fix http://bugs.webkit.org/show_bug.cgi?id=16865
          fast/layers/resize-layer-deletion-crash.html crashes under GuardMalloc

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::destroy): Removed the call to
        RenderLayer::destroy() from here, because ~RenderLayer() calls
        RenderObject() methods.
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::destroy): Added the call to
        RenderLayer::destroy() here.



Canonical link: https://commits.webkit.org/23290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29457 268f45cc-cd09-0410-ab3c-d52691b4dbfc